Added buton to reset the grid

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div id = "outerContainer">
         <div id= "mainContainer">
         </div>
+        <div id = "btn">
+          <button id = "reset">CLICK TO START AGAIN</button>
+        </div>
       </div>
     </main>
   </body>
